Fixed root directory

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-universal",
+  "name": "ssypc-contest-website",
   "license": "MIT",
   "author": "Fabian Schultz <desk@fabianschultz.com>",
   "scripts": {
