--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-pose": "^4.0.5",
+    "simple-react-lightbox": "^3.2.3-3",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
